<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/transparent_dlg"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        >

        <!-- 加入android:shrinkColumns="1" 解决tableRow里textView不能换行的问题 -->

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_permissions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:lines="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/permissions"
                android:textColor="@color/green"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_permissions_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/app_name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:lines="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/owner"
                android:textColor="@color/green"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_owner_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/app_name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:lines="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/group"
                android:textColor="@color/green"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_group_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/app_name" />
        </TableRow>

                <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_mime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:lines="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/mime"
                android:textColor="@color/green"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_mime_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/app_name" />
        </TableRow>
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:lines="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/path"
                android:textColor="@color/green"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_path_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/app_name" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:lines="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/size"
                android:textColor="@color/green"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_size_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_mtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:lines="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/last_modified"
                android:textColor="@color/green"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_mtime_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/popup_cancel"
        android:layout_width="300dp"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@drawable/button_green_bg"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/file_icon_normal"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>