<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/file_popup_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popup_menu_bg"
    android:gravity="center_vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/popup_menu_bg"
        android:orientation="vertical" 
        >

        <TextView
            android:id="@+id/tv_file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:background="@drawable/button_purple"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="2dp"
            android:paddingTop="2dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_green_bg"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/tv_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/file_icon_normal"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/open" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_green_bg"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/tv_rename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/file_icon_normal"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/rename" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/popup_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_green_bg"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/file_icon_normal"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/details" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_green_bg"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/tv_cut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/file_icon_normal"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/cut" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_green_bg"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/tv_copy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/file_icon_normal"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/copy" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_green_bg"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/tv_del"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/file_icon_normal"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/delete" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/popup_cancel"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="@drawable/button_green_bg"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <TextView
                
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/file_icon_normal"
                android:gravity="center_horizontal|bottom"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>